<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/home" />
        <item
            android:id="@+id/nav_about"

            android:title="@string/about" />
        <item
            android:id="@+id/action_start_game"
            android:title="@string/start_game"
            android:icon="@drawable/baseline_videogame_asset_24"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/nav_articles"

            android:title="@string/articles" />
        <item
            android:id="@+id/nav_logout"

            android:title="@string/logout" />
        <item
            android:title="@string/share"
            android:id="@+id/nav_Share">

        </item>

    </group>


</menu>
